# arepo_tracer_tools

./: LICENSE  README.md  setup.cfg  tracer_reader.py  tracer_trail.py
arepo_tracer_tools/arepo_tracer_tools.egg-info/: PKG-INFO  SOURCES.txt
src/arepo_tracer_tools/: read_params.py  tracer_gif.py  tracer_reader.py  tracer_trail.py
