[metadata]
name = arepo_tracer_tools
version = 0.0.1
author = Javier Morán Fraile
author_email = Javier.Moranfraile@h-its.org
description = arepo_tracer_tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmoran2611/arepo_tracer_tools
project_urls =
    Bug Tracker = https://github.com/jmoran2611/arepo_tracer_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = arepo_tracer_tools
packages = find:
python_requires = >=3.6

[options.packages.find]
where = arepo_tracer_tools
